# GUI-Control-Node

./: CMakeLists.txt  Dev.md  FlowChart.drawio  README.md  package.xml
drone_control_msgs/: CMakeLists.txt  package.xml  readme.md
drone_control_msgs/msg/: GetDroneState.msg  SetDroneState.msg
drone_control_node/: CMakeLists.txt  package.xml
drone_control_node/launch/: exampleOffboardHasGripper.launch  exampleOnboardHasGripper.launch  exampleOnboardWithoutServo.launch  lauchDroneControlNode.launch
drone_control_node/scripts/: control_node.py
launch/: exampleOnboard.launch  lauchDroneControlNode.launch
scripts/: control_node.py  test2.py  test3.py
