<?xml version="1.0"?>
<package format="2">
  <name>drone_control_msgs</name>
  <version>1.0.0</version>
  <description>
    mavros_msgs defines messages for <a href="">drone</a>.
  </description>

  <maintainer email="tszman.chong@connect.polyu.hk">Tsz Man, CHONG</maintainer>
  <author email="tszman.chong@connect.polyu.hk">Tsz Man, CHONG</author>

  <license>BSD</license>

  <url type="website">https://github.com/Drone-FYP2021-PolyU-EIE/dron_control_node</url>
  <url type="repository">https://github.com/Drone-FYP2021-PolyU-EIE/dron_control_node.git</url>
  <url type="bugtracker">https://github.com/Drone-FYP2021-PolyU-EIE/dron_control_node/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
